added exercise method
